--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -112,7 +112,7 @@
 
 <a id="hovezi-jazyk-s-polskou-omackou"><h2>Hovězí jazyk s&nbsp;polskou omáčkou</h2></a>
 
-<p>Udělej brunatnou jíšku a&nbsp;dej do ni kus cukru, aby dostala hodně tmavou barvu, pak na ni nalej asi žejdlík hovězí polívky, skleničku vína a&nbsp;trochu octa, dej do toho nakrájenou citronovou kůru, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> velkých přebraných hrozinek, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> oloupaných na nudličky nakrájených mandlí, trochu tlučeného hřebíčku a&nbsp;nového koření, a&nbsp;nech to hodně povařit Oloupej do měkká uvařený hovězí jazyk, rozkrájej ho na koláčky, vlož ho do misy, polej tou připravenou omáčkou a&nbsp;oblož ho věnečkami z&nbsp;máselného těsta.</p>
+<p>Udělej brunatnou jíšku a&nbsp;dej do ni kus cukru, aby dostala hodně tmavou barvu, pak na ni nalej asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> hovězí polívky, skleničku vína a&nbsp;trochu octa, dej do toho nakrájenou citronovou kůru, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> velkých přebraných hrozinek, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> oloupaných na nudličky nakrájených mandlí, trochu tlučeného hřebíčku a&nbsp;nového koření, a&nbsp;nech to hodně povařit Oloupej do měkká uvařený hovězí jazyk, rozkrájej ho na koláčky, vlož ho do misy, polej tou připravenou omáčkou a&nbsp;oblož ho věnečkami z&nbsp;máselného těsta.</p>
 
 <a id="nadivany-hovezi-jazyk"><h2>Nadívaný hovězí jazyk</h2></a>
 
