--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -2,11 +2,11 @@
 
 <a id="kompot-z-cerstvych-visni"><h2>Kompot z&nbsp;čerstvých višní</h2></a>
 
-<p>Nech na rendlíku v&nbsp;půl žejdlíku vody vařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;kouskem skořice, pak do toho vlož asi dva-žejdlíky omytých višni a&nbsp;nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a&nbsp;pak ji vlej na višně. Třešňový kompot připravuje se na týž způsob, jen že se dá o&nbsp;polovic méně cukru.</p>
+<p>Nech na rendlíku v&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíku</a> vody vařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;kouskem skořice, pak do toho vlož asi dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> omytých višni a&nbsp;nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a&nbsp;pak ji vlej na višně. Třešňový kompot připravuje se na týž způsob, jen že se dá o&nbsp;polovic méně cukru.</p>
 
 <a id="kompot-z-jahod"><h2>Kompot z&nbsp;jahod</h2></a>
 
-<p>Nech na rendlíku ve čtvrt žejdlíku vína zvařit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru, a&nbsp;když to počíná houstnou dej do toho žejdlík přebraných pěkných lesních jahod, zatřes jimi zlehka, aby se všechny potopily, nech jen var přes ně přejít a&nbsp;vyklop je na misku.</p>
+<p>Nech na rendlíku ve čtvrt <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíku</a> vína zvařit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru, a&nbsp;když to počíná houstnou dej do toho <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> přebraných pěkných lesních jahod, zatřes jimi zlehka, aby se všechny potopily, nech jen var přes ně přejít a&nbsp;vyklop je na misku.</p>
 
 <a id="kompot-z-malin"><h2>Kompot z&nbsp;malin</h2></a>
 
@@ -14,7 +14,7 @@
 
 <a id="kompot-z-angrestu"><h2>Kompot z&nbsp;angreštu</h2></a>
 
-<p>Ober čistě asi žejdlík ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru,. potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
+<p>Ober čistě asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru,. potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
 
 <a id="kompot-z-merunek"><h2>Kompot z&nbsp;meruněk</h2></a>
 
@@ -46,7 +46,7 @@
 
 <a id="kompot-z-cerstvych-svestek"><h2>Kompot z&nbsp;čerstvých švestek</h2></a>
 
-<p>Nech na rendlíku rozpustit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru v&nbsp;půl žejdlíku červeného vína, vlož do toho asi třicet pěkných švestek, přidej trochu skořice a&nbsp;nech je přikryté zpovolna dusit, dej však pozor, aby zůstaly celé; pak je vyndej, polej šťávou a&nbsp;nech vystydnout.</p>
+<p>Nech na rendlíku rozpustit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru v&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíku</a> červeného vína, vlož do toho asi třicet pěkných švestek, přidej trochu skořice a&nbsp;nech je přikryté zpovolna dusit, dej však pozor, aby zůstaly celé; pak je vyndej, polej šťávou a&nbsp;nech vystydnout.</p>
 
 <a id="jiny-kompot-z-cerstvych-svestek"><h2>Jiný kompot z&nbsp;čerstvých švestek</h2></a>
 
@@ -82,5 +82,5 @@
 
 <a id="kompot-z-brusinek"><h2>Kompot z&nbsp;brusinek</h2></a>
 
-<p>Nech na rendlíčku zvařit půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> červeného vína se Čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru, přidej k&nbsp;tomu kousek skořice a&nbsp;trochu citronové kůry, a&nbsp;když to začíná houstnout, dej do toho asi žejdlík zavařených brusinek, nech je jenom zpejchnout a&nbsp;vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a&nbsp;dej to na stůl.</p>
+<p>Nech na rendlíčku zvařit půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> červeného vína se Čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru, přidej k&nbsp;tomu kousek skořice a&nbsp;trochu citronové kůry, a&nbsp;když to začíná houstnout, dej do toho asi <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> zavařených brusinek, nech je jenom zpejchnout a&nbsp;vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a&nbsp;dej to na stůl.</p>
 
