--- a/src/napoje.html
+++ b/src/napoje.html
@@ -2,7 +2,7 @@
 
 <a id="citronova-voda"><h2>Citronová voda</h2></a>
 
-<p>Na žejdlík vody ostrouhej na cukru kůru s&nbsp;půl citronu, vytlač k&nbsp;tomu z&nbsp;půl citronu šťávu, zamíchej do toho asi půl druhého nebo dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru – a&nbsp;máš chutný, občerstvující nápoj pro zdravé i&nbsp;nemocné. Chceš-li míti teplou limonádu, tedy dej místo studené vody vařící. Máš-li zapotřebí mnoho limonády, tedy vymačkej tolik citronů, aby bylo šťávy půl žejdlíka, na citronové kůře ostrouhej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, potom dej šťávu i&nbsp;cukr na mosazný kotlíček a&nbsp;nech přes to přejít jen jeden var, pak to proceď skrze čistý šat a&nbsp;nech to vychladnout; Lžička této šťávy stačí do sklenice vody.</p>
+<p>Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vody ostrouhej na cukru kůru s&nbsp;půl citronu, vytlač k&nbsp;tomu z&nbsp;půl citronu šťávu, zamíchej do toho asi půl druhého nebo dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru – a&nbsp;máš chutný, občerstvující nápoj pro zdravé i&nbsp;nemocné. Chceš-li míti teplou limonádu, tedy dej místo studené vody vařící. Máš-li zapotřebí mnoho limonády, tedy vymačkej tolik citronů, aby bylo šťávy půl žejdlíka, na citronové kůře ostrouhej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, potom dej šťávu i&nbsp;cukr na mosazný kotlíček a&nbsp;nech přes to přejít jen jeden var, pak to proceď skrze čistý šat a&nbsp;nech to vychladnout; Lžička této šťávy stačí do sklenice vody.</p>
 
 <a id="mandlove-mleko"><h2>Mandlové mléko</h2></a>
 
@@ -10,11 +10,11 @@
 
 <a id="puns"><h2>Punš</h2></a>
 
-<p>Nech <a href="miry-a-vahy.html#libra" class="mav">libru</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody v&nbsp;novém kastrolku zvařit, a&nbsp;když se táhne, přidej k&nbsp;němu již přichystanou, ze třech citronů a&nbsp;jednoho pomeranče vytlačenou a&nbsp;procezenou šťávu, načež to hned odstav od ohně, aby to nezhořklo, nalej do toho mezi ustavičným mícháním žejdlík dobrého rumu a&nbsp;uschovej to v&nbsp;lahvicích. Že tato jako i&nbsp;každá jiná massa, s&nbsp;vařící vodou smíšená, v&nbsp;punšových skleničkách se podává, jest snad každému známo. Tento punš je jednoduchý ale dobrý, a&nbsp;nepůsobí žádné bolení hlavy.</p>
+<p>Nech <a href="miry-a-vahy.html#libra" class="mav">libru</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody v&nbsp;novém kastrolku zvařit, a&nbsp;když se táhne, přidej k&nbsp;němu již přichystanou, ze třech citronů a&nbsp;jednoho pomeranče vytlačenou a&nbsp;procezenou šťávu, načež to hned odstav od ohně, aby to nezhořklo, nalej do toho mezi ustavičným mícháním <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobrého rumu a&nbsp;uschovej to v&nbsp;lahvicích. Že tato jako i&nbsp;každá jiná massa, s&nbsp;vařící vodou smíšená, v&nbsp;punšových skleničkách se podává, jest snad každému známo. Tento punš je jednoduchý ale dobrý, a&nbsp;nepůsobí žádné bolení hlavy.</p>
 
 <a id="cajovy-puns"><h2>Čajový punš</h2></a>
 
-<p>Dej do čistého hrnku <a href="miry-a-vahy.html#lot" class="mav">lot</a> holandského čaje, nalej na něj žejdlík vařící vody, přikrej ho a&nbsp;nech ho na teplém místě stát, nesmí se však vařit. Ostrouhej na pěti čtvrtích <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru kůru s&nbsp;jednoho citronu a&nbsp;s&nbsp;jednoho pomeranče, pak dej cukr na čistý kastrol, proceď na něj čaj, který musí míti krásně žlutou barvu, a&nbsp;nech ho zvařit, až se táhne, načež přidej k&nbsp;němu ze šesti citronů a&nbsp;z&nbsp;jednoho pomeranče procezenou šťávu a&nbsp;žejdlík dobrého rumu. Nyní tuto massu buď uschovej v&nbsp;dobře zandaných láhvích, anebo, pije-li se punš hned, spař půl lotu čaje v&nbsp;několika žejdlíkách vařící vody, mnoho-li právě potřebuješ, pak ho proceď a&nbsp;přilévej místo vody k&nbsp;punši. Obyčejně se dává jeden díl massy a&nbsp;dva díly vody.</p>
+<p>Dej do čistého hrnku <a href="miry-a-vahy.html#lot" class="mav">lot</a> holandského čaje, nalej na něj <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vařící vody, přikrej ho a&nbsp;nech ho na teplém místě stát, nesmí se však vařit. Ostrouhej na pěti čtvrtích <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru kůru s&nbsp;jednoho citronu a&nbsp;s&nbsp;jednoho pomeranče, pak dej cukr na čistý kastrol, proceď na něj čaj, který musí míti krásně žlutou barvu, a&nbsp;nech ho zvařit, až se táhne, načež přidej k&nbsp;němu ze šesti citronů a&nbsp;z&nbsp;jednoho pomeranče procezenou šťávu a&nbsp;žejdlík dobrého rumu. Nyní tuto massu buď uschovej v&nbsp;dobře zandaných láhvích, anebo, pije-li se punš hned, spař půl lotu čaje v&nbsp;několika žejdlíkách vařící vody, mnoho-li právě potřebuješ, pak ho proceď a&nbsp;přilévej místo vody k&nbsp;punši. Obyčejně se dává jeden díl massy a&nbsp;dva díly vody.</p>
 
 <a id="punc-s-vejcemi"><h2>Punč s&nbsp;vejcemi</h2></a>
 
@@ -38,11 +38,11 @@
 
 <a id="cokolada"><h2>Čokoláda</h2></a>
 
-<p>Na žejdlík dobré smetany ustrouhají se 3 tabulky dobré čokolády, a&nbsp;když se smetana vaří, vleje se na čokoládu, a&nbsp;mezi ustavičným mícháním sbírá se lžičkou pěna a&nbsp;dává se do koflíků. Když jsou koflíky pěnou přeplněny, tedy se nahoře žhavým uhlím připálí, ostatní čokoláda se zakloktá studenou, žloutkem rozmíchanou smetanou, naleje se do konvičky a&nbsp;dá se na stůl k&nbsp;pěně za podlívku. Na žejdlík čokolády vezme se jeden žloutek. Této pěny může se též použit místo šodó do smažených košíčků, jakož i&nbsp;na vařené buchty a&nbsp;rozličné smaženinky.</p>
+<p>Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobré smetany ustrouhají se 3 tabulky dobré čokolády, a&nbsp;když se smetana vaří, vleje se na čokoládu, a&nbsp;mezi ustavičným mícháním sbírá se lžičkou pěna a&nbsp;dává se do koflíků. Když jsou koflíky pěnou přeplněny, tedy se nahoře žhavým uhlím připálí, ostatní čokoláda se zakloktá studenou, žloutkem rozmíchanou smetanou, naleje se do konvičky a&nbsp;dá se na stůl k&nbsp;pěně za podlívku. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> čokolády vezme se jeden žloutek. Této pěny může se též použit místo šodó do smažených košíčků, jakož i&nbsp;na vařené buchty a&nbsp;rozličné smaženinky.</p>
 
 <a id="cokolada-z-vody"><h2>Čokoláda z&nbsp;vody</h2></a>
 
-<p>Ustrouhá se dle potřeby několik tabulek čokolády, ku př. na žejdlík vody čtyry tabulky, a&nbsp;nechá se mezi ustavičným kloktáním uvařit; žloutky se vynechaji.</p>
+<p>Ustrouhá se dle potřeby několik tabulek čokolády, ku př. na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vody čtyry tabulky, a&nbsp;nechá se mezi ustavičným kloktáním uvařit; žloutky se vynechaji.</p>
 
 <a id="kava"><h2>Káva</h2></a>
 
@@ -62,11 +62,11 @@
 
 <a id="sodo"><h2>Šodó</h2></a>
 
-<p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, s&nbsp;půl citronu nerozkrájenou kůru, žejdlík dobrého rakouského vina, a&nbsp;hned za studena to hezky rozkloktej; pak oblož kolem hrnku hodně uhlí, nebo to postav na rozpálenou plotnu a&nbsp;pořád tím kloktej, až se to pění a&nbsp;ve vaření zhoustne, načež to honem nalej do koflíků a&nbsp;dej to na stůl. Šodó se může též k&nbsp;rozličným jídlům potřebovat, jako ke košíčkům, vařeným buchtám (puding), smaženým štrudlím a&nbsp;t. p.</p>
+<p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, s&nbsp;půl citronu nerozkrájenou kůru, <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobrého rakouského vina, a&nbsp;hned za studena to hezky rozkloktej; pak oblož kolem hrnku hodně uhlí, nebo to postav na rozpálenou plotnu a&nbsp;pořád tím kloktej, až se to pění a&nbsp;ve vaření zhoustne, načež to honem nalej do koflíků a&nbsp;dej to na stůl. Šodó se může též k&nbsp;rozličným jídlům potřebovat, jako ke košíčkům, vařeným buchtám (puding), smaženým štrudlím a&nbsp;t. p.</p>
 
 <a id="sodo-ze-slivovice"><h2>Šodó ze slivovice</h2></a>
 
-<p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k&nbsp;nim 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> tlučeného cukru, s&nbsp;jednoho citronu drobně rozkrájenou kůru, a&nbsp;rozdělej to asi s&nbsp;pěti lžícemi studeného rakouského vina; pak vlej na bílou hlubokou mísu žejdlík dobré slivovice, zapal ji papírem a&nbsp;nech ji chvilku hořet, potom ji vlej na ty rozkloktané žloutky, postav hrnek do uhlí a&nbsp;míchej to jako jiné šodó, až nabude a&nbsp;zhoustne. Můžeš ho dát na stůl buď tak v&nbsp;koflíčkách, nebo nim polej mandlový dort a&nbsp;dej ho mezi nákypy.</p>
+<p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k&nbsp;nim 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> tlučeného cukru, s&nbsp;jednoho citronu drobně rozkrájenou kůru, a&nbsp;rozdělej to asi s&nbsp;pěti lžícemi studeného rakouského vina; pak vlej na bílou hlubokou mísu <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobré slivovice, zapal ji papírem a&nbsp;nech ji chvilku hořet, potom ji vlej na ty rozkloktané žloutky, postav hrnek do uhlí a&nbsp;míchej to jako jiné šodó, až nabude a&nbsp;zhoustne. Můžeš ho dát na stůl buď tak v&nbsp;koflíčkách, nebo nim polej mandlový dort a&nbsp;dej ho mezi nákypy.</p>
 
 <a id="palene-vino"><h2>Pálené víno</h2></a>
 
@@ -76,7 +76,7 @@
 
 <p>Skrájej velmi tence kůru se třech citronů, nalej na ni půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody a&nbsp;nech ji šest hodin močit.</p>
 
-<p>Potom dej na kastrol půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> nejpěknějšího cukru, nalej na něj žejdlík vody, láhev rumu, přidej k&nbsp;tomu též tu vodu z&nbsp;citronové kůry a&nbsp;z&nbsp;pěti citronů procezenou šťávu, a&nbsp;míchej tím stále nad ohněm, až to přichází k&nbsp;varu; načež k&nbsp;tomu mezi ustavičným mícháním proceď skrze ubrousek půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> mléka, odstav to od ohně, přikrej to ve studené vodě namočeným a&nbsp;vyždímaným ubrouskem, a&nbsp;nech to dvě hodiny stát; pak to skrze ubrousek dvakrát po sobě proceď, poněvadž to poprvé není docela čisté. Tento nápoj večer lahodně chutná.</p>
+<p>Potom dej na kastrol půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> nejpěknějšího cukru, nalej na něj <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vody, láhev rumu, přidej k&nbsp;tomu též tu vodu z&nbsp;citronové kůry a&nbsp;z&nbsp;pěti citronů procezenou šťávu, a&nbsp;míchej tím stále nad ohněm, až to přichází k&nbsp;varu; načež k&nbsp;tomu mezi ustavičným mícháním proceď skrze ubrousek půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> mléka, odstav to od ohně, přikrej to ve studené vodě namočeným a&nbsp;vyždímaným ubrouskem, a&nbsp;nech to dvě hodiny stát; pak to skrze ubrousek dvakrát po sobě proceď, poněvadž to poprvé není docela čisté. Tento nápoj večer lahodně chutná.</p>
 
 <a id="malinova-slava"><h2>Malinová sláva</h2></a>
 
@@ -86,5 +86,5 @@
 
 <a id="jecna-voda"><h2>Ječná voda</h2></a>
 
-<p>Přeber žejdlík ječmena, nalej na něj máz vody a&nbsp;nech jej hodně vařit; kdyby se to příliš vyvařilo, můžeš přilejt vody; načež to přeceď, a&nbsp;máš-li med, oslaď to dle libosti medem, pakli ne, tedy cukrem, a&nbsp;proceď k&nbsp;tomu z&nbsp;jednoho citronu šťávu. Tento nápoj jest pro nemocné zvláště prospěšný.</p>
+<p>Přeber <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ječmena, nalej na něj máz vody a&nbsp;nech jej hodně vařit; kdyby se to příliš vyvařilo, můžeš přilejt vody; načež to přeceď, a&nbsp;máš-li med, oslaď to dle libosti medem, pakli ne, tedy cukrem, a&nbsp;proceď k&nbsp;tomu z&nbsp;jednoho citronu šťávu. Tento nápoj jest pro nemocné zvláště prospěšný.</p>
 
