--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -22,7 +22,7 @@
 
 <a id="ocet-fialkovy"><h2>Ocet fialkový</h2></a>
 
-<p>Dej do skleněné láhve žejdlík otrhaného fialkového květu, nalej na něj tři <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vinního octa a&nbsp;postav to na slunce; čtrnáctý den to skrze čisté plátno proceď a&nbsp;v&nbsp;malých lahvičkách uschovej. I&nbsp;tento ocet vyznamenává se krásnou svou barvou a&nbsp;chutí.</p>
+<p>Dej do skleněné láhve <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> otrhaného fialkového květu, nalej na něj tři <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vinního octa a&nbsp;postav to na slunce; čtrnáctý den to skrze čisté plátno proceď a&nbsp;v&nbsp;malých lahvičkách uschovej. I&nbsp;tento ocet vyznamenává se krásnou svou barvou a&nbsp;chutí.</p>
 
 <a id="ocet-citronovy"><h2>Ocet citronový</h2></a>
 
