--- a/src/zmrzliny.html
+++ b/src/zmrzliny.html
@@ -10,7 +10,7 @@
 
 <a id="zmrzlina-z-vanilie"><h2>Zmrzlina z&nbsp;vanilie</h2></a>
 
-<p>Nech vařit žejdlík dobré smetany se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru a&nbsp;jedním <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlíkem</a> na malé kousky nakrájené vanilie, pak rozkloktej šest žloutků s&nbsp;trochou studené smetany, vlej to do vařící smetany a&nbsp;míchej tím, až to zhoustne, potom to proceď skrze žíněné sejtko do nějaké nádoby, a&nbsp;míchej tím, až to hodně vychladne, načež to vlej do pyksly a&nbsp;nech to mezi ustavičným mícháním zmrznout.</p>
+<p>Nech vařit <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobré smetany se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru a&nbsp;jedním <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlíkem</a> na malé kousky nakrájené vanilie, pak rozkloktej šest žloutků s&nbsp;trochou studené smetany, vlej to do vařící smetany a&nbsp;míchej tím, až to zhoustne, potom to proceď skrze žíněné sejtko do nějaké nádoby, a&nbsp;míchej tím, až to hodně vychladne, načež to vlej do pyksly a&nbsp;nech to mezi ustavičným mícháním zmrznout.</p>
 
 <a id="zmrzlina-z-caje"><h2>Zmrzlina z&nbsp;čaje</h2></a>
 
@@ -44,15 +44,15 @@
 
 <a id="zmrzlina-z-jahod"><h2>Zmrzlina z&nbsp;jahod</h2></a>
 
-<p>Rozmačkej zralé jahody a&nbsp;proceď je skrze žíněné sejtko. Na žejdlík jahodové šťávy nech dvanáct <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;koflíčkem vody tak dlouho vařit, až se opění, pak do něho naceď šťávu z&nbsp;jednoho citronu, dej k&nbsp;tomu též s&nbsp;jednoho citronu na čtvrt libře cukru ostrouhanou kůru a&nbsp;nech to mezi ustavičným mícháním docela vychladnout; potom dej k&nbsp;tomu ty procezené jahody, hodně to promíchej, dej to do pyksly, tuto postav do ledu a&nbsp;dělej zmrzlinu.</p>
+<p>Rozmačkej zralé jahody a&nbsp;proceď je skrze žíněné sejtko. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> jahodové šťávy nech dvanáct <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;koflíčkem vody tak dlouho vařit, až se opění, pak do něho naceď šťávu z&nbsp;jednoho citronu, dej k&nbsp;tomu též s&nbsp;jednoho citronu na čtvrt libře cukru ostrouhanou kůru a&nbsp;nech to mezi ustavičným mícháním docela vychladnout; potom dej k&nbsp;tomu ty procezené jahody, hodně to promíchej, dej to do pyksly, tuto postav do ledu a&nbsp;dělej zmrzlinu.</p>
 
 <a id="jahodova-zmrzlina-se-smetanou"><h2>Jahodová zmrzlina se smetanou</h2></a>
 
-<p>Rozmačkej a&nbsp;proceď na předešlý způsob pěkné lesní jahody. Na žejdlík šťávy utluč <a href="miry-a-vahy.html#libra" class="mav">libru</a> cukru, pak dej oboje do hladké hluboké nádoby a&nbsp;míchej tím dobré půl hodiny; načež k&nbsp;tomu znenáhla a&nbsp;mezi ustavičným mícháním přilej žejdlík husté syrové smetany, vlej to do pyksly a&nbsp;dělej dle předpisu zmrzlinu.</p>
+<p>Rozmačkej a&nbsp;proceď na předešlý způsob pěkné lesní jahody. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> šťávy utluč <a href="miry-a-vahy.html#libra" class="mav">libru</a> cukru, pak dej oboje do hladké hluboké nádoby a&nbsp;míchej tím dobré půl hodiny; načež k&nbsp;tomu znenáhla a&nbsp;mezi ustavičným mícháním přilej <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> husté syrové smetany, vlej to do pyksly a&nbsp;dělej dle předpisu zmrzlinu.</p>
 
 <a id="zmrzlina-z-visni"><h2>Zmrzlina z&nbsp;višní</h2></a>
 
-<p>Utluč v&nbsp;moždíři pěkné španělské višně i&nbsp;s&nbsp;peckami, dej je do čisté nádobky a&nbsp;nech je přes noc nebo aspoň několik hodin stát, aby od pecek lepší chuť dostaly. Na žejdlík takovéto procezené štávy nech 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;koflíčkem vody hezky povařit, až se začne táhnout, potom k&nbsp;němu dej tu višňovou šťávu, dobře to promíchej a&nbsp;nech to vystydnout, pak to vlej do pyksly a&nbsp;dělej zmrzlinu. Chceš-li, můžeš k&nbsp;tomu též dát s&nbsp;jednoho citronu na cukru ostrouhanou kůru i&nbsp;šťávu z&nbsp;téhož citronu do toho vymačkat, pak se ale musí přidat 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru. Také se k&nbsp;tomu může přidat trochu drobnince tlučené a&nbsp;skrze husté žíněné sejtko prosáté skořice.</p>
+<p>Utluč v&nbsp;moždíři pěkné španělské višně i&nbsp;s&nbsp;peckami, dej je do čisté nádobky a&nbsp;nech je přes noc nebo aspoň několik hodin stát, aby od pecek lepší chuť dostaly. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> takovéto procezené štávy nech 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;koflíčkem vody hezky povařit, až se začne táhnout, potom k&nbsp;němu dej tu višňovou šťávu, dobře to promíchej a&nbsp;nech to vystydnout, pak to vlej do pyksly a&nbsp;dělej zmrzlinu. Chceš-li, můžeš k&nbsp;tomu též dát s&nbsp;jednoho citronu na cukru ostrouhanou kůru i&nbsp;šťávu z&nbsp;téhož citronu do toho vymačkat, pak se ale musí přidat 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru. Také se k&nbsp;tomu může přidat trochu drobnince tlučené a&nbsp;skrze husté žíněné sejtko prosáté skořice.</p>
 
 <a id="zmrzlina-z-malin"><h2>Zmrzlina z&nbsp;malin</h2></a>
 
