--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -45,7 +45,7 @@
 
 <a id="jak-se-dela-jecna-mouka"><h2>Jak se dělá ječná mouka</h2></a>
 
-<p>Časem jest zapotřebí nakvap koflíček krupovky <i>(Gerstel)</i>. Než by se kroupy uvařily, ušlo by mnoho času; pročež je záhodno, aby se také ječná mouka v&nbsp;zásobě držela, ne sice mnoho, ale vždy tolik, co by se náhodou mohlo potřebovat.</p>
+<p>Časem jest zapotřebí nakvap <a href="miry-a-vahy.html#koflicek" class="mav">koflíček</a> krupovky <i>(Gerstel)</i>. Než by se kroupy uvařily, ušlo by mnoho času; pročež je záhodno, aby se také ječná mouka v&nbsp;zásobě držela, ne sice mnoho, ale vždy tolik, co by se náhodou mohlo potřebovat.</p>
 
 <p>Utluč aspoň půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> perlových krup a&nbsp;prosej je skrze žíněné sejtko; co zůstane v&nbsp;sejtku, opět utluč a&nbsp;prosej. Tak vyzískáš pěknou mouku; tu dej do sklenice, obvaz ji papírem, tento malým špendlíkem propíchej, a&nbsp;ulož to na suché místo. Lžíci této mouky na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> polívky zavařit, kouskem másla, jedním žloutkem a&nbsp;trochou květu ji připravit, poskytne za půl hodiny výbornou krupovku, kdežto by, než by se kroupy uvařily, dvě hodiny minuly. Také se může rejžové mouky na krupovku použit.</p>
 
