--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -28,7 +28,7 @@
 
 <a id="dobry-tvarohovy-kolac"><h2>Dobrý tvarohový koláč</h2></a>
 
-<p>Nejdříve si připrav tvaroh se žloutkama, cukrem a&nbsp;několika hořkými mandlemi; potom dej na vál čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> mouky, rozžmol zlehka do ni čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvého tuhého másla, rozkloktej v&nbsp;půl koflíku studené vody jeden žloutek a&nbsp;zadělej tím těsto, pak ho rozděl na dva stejné díly, z&nbsp;jednoho udělej velkou tenkou placku, dej ji na máslem pomazaný papír, potři ji tlustě tím připraveným tvarohem, potom udělej druhou placku, polož ji opatrně navrch, okolo všude prstama ji přímačkej a&nbsp;dej to do trouby pect. Když jest koláč upečený, posyp ho hodně vanilovým cukrem.</p>
+<p>Nejdříve si připrav tvaroh se žloutkama, cukrem a&nbsp;několika hořkými mandlemi; potom dej na vál čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> mouky, rozžmol zlehka do ni čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvého tuhého másla, rozkloktej v&nbsp;půl <a href="miry-a-vahy.html#koflicek" class="mav">koflíku</a> studené vody jeden žloutek a&nbsp;zadělej tím těsto, pak ho rozděl na dva stejné díly, z&nbsp;jednoho udělej velkou tenkou placku, dej ji na máslem pomazaný papír, potři ji tlustě tím připraveným tvarohem, potom udělej druhou placku, polož ji opatrně navrch, okolo všude prstama ji přímačkej a&nbsp;dej to do trouby pect. Když jest koláč upečený, posyp ho hodně vanilovým cukrem.</p>
 
 <a id="hanoversky-kolac"><h2>Hanoverský koláč</h2></a>
 
@@ -144,7 +144,7 @@
 
 <a id="spesne-rohlicky"><h2>Spěšné rohlíčky</h2></a>
 
-<p>Utři dobře půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvého másla, a&nbsp;mezi třením vlej do něho plný kávový koflíček vlažné vody; musíš ale spěšně míchat; pak dej do toho mouky tolik, co by těsto bylo asi tak husté, jako na třené knedlíčky (nuky), trochu ho osol, postav do chladného místa a&nbsp;nech ho asi půl hodinky ztuhnout; potom z&nbsp;něho spěšně dělej ve chladu malé placaté rohlíčky, oblož je hezky tuhým sněhem a&nbsp;cukrem, posyp je hodně strouhanými mandlemi (mezi cukr a&nbsp;mandle může se smíchat také tlučená vanilie, tak jsou ještě lepší) a&nbsp;nech je spěšně upect, načež je dobře posyp cukrem.</p>
+<p>Utři dobře půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvého másla, a&nbsp;mezi třením vlej do něho plný kávový <a href="miry-a-vahy.html#koflicek" class="mav">koflíček</a> vlažné vody; musíš ale spěšně míchat; pak dej do toho mouky tolik, co by těsto bylo asi tak husté, jako na třené knedlíčky (nuky), trochu ho osol, postav do chladného místa a&nbsp;nech ho asi půl hodinky ztuhnout; potom z&nbsp;něho spěšně dělej ve chladu malé placaté rohlíčky, oblož je hezky tuhým sněhem a&nbsp;cukrem, posyp je hodně strouhanými mandlemi (mezi cukr a&nbsp;mandle může se smíchat také tlučená vanilie, tak jsou ještě lepší) a&nbsp;nech je spěšně upect, načež je dobře posyp cukrem.</p>
 
 <a id="dobre-a-lacine-rohlicky-ku-kave"><h2>Dobré a&nbsp;laciné rohlíčky ku kávě</h2></a>
 
