--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -18,7 +18,7 @@
 
 <a id="kompot-z-merunek"><h2>Kompot z&nbsp;meruněk</h2></a>
 
-<p>Oloupej dvanáct zralých sice, ale ještě tvrdých meruněk, rozpůli je, pecky vyndej, meruňky polož jednu vedle druhé do čistého kuthánku, přidej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, koflíček vody, přikrej je a&nbsp;nech je zlehounka dusit, až změknou; potom je vyndej na misku, do šťávy přidej z&nbsp;roztlučených pecek vyndané a&nbsp;v&nbsp;moždíři utlučené jádra, nech to ještě zvařit a&nbsp;pak meruňky tím polej. Jádrami nabydou meruňky zvláštní chuti.</p>
+<p>Oloupej dvanáct zralých sice, ale ještě tvrdých meruněk, rozpůli je, pecky vyndej, meruňky polož jednu vedle druhé do čistého kuthánku, přidej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, <a href="miry-a-vahy.html#koflicek" class="mav">koflíček</a> vody, přikrej je a&nbsp;nech je zlehounka dusit, až změknou; potom je vyndej na misku, do šťávy přidej z&nbsp;roztlučených pecek vyndané a&nbsp;v&nbsp;moždíři utlučené jádra, nech to ještě zvařit a&nbsp;pak meruňky tím polej. Jádrami nabydou meruňky zvláštní chuti.</p>
 
 <a id="kompot-z-broskvi"><h2>Kompot z&nbsp;broskvi</h2></a>
 
