--- a/src/miry-a-vahy.html
+++ b/src/miry-a-vahy.html
@@ -15,3 +15,7 @@
 <a id="kvintlik"><h2>Kvintlík</h2></a>
 
 <p class="c">4 gramy</p>
+
+<a id="koflicek"><h2>Koflíček</h2></a>
+
+<p class="c">Hrníček</p>
