--- a/src/salaty.html
+++ b/src/salaty.html
@@ -2,7 +2,7 @@
 
 <a id="salat-hlavkovy"><h2>Salát hlávkový</h2></a>
 
-<p>Ober svrchní listy s&nbsp;několika hlávek pěkného tvrdého salátu, rozkrájej je na čtvrtky a&nbsp;vyper je náležitě v&nbsp;několika vodách; potom rozmíchej půl koflíka brabancového oleje s&nbsp;dobrým vinním octem a&nbsp;solí, omoč v&nbsp;tom každou čtvrtku salátu, urovnej ho pěkně na misku a&nbsp;polej ho ještě všude tím smíšeným octem. Kdo chce, může salát několika na tvrdo uvařenými a&nbsp;na čtvrtky rozkrájenými vejci obložit.</p>
+<p>Ober svrchní listy s&nbsp;několika hlávek pěkného tvrdého salátu, rozkrájej je na čtvrtky a&nbsp;vyper je náležitě v&nbsp;několika vodách; potom rozmíchej půl <a href="miry-a-vahy.html#koflicek" class="mav">koflíka</a> brabancového oleje s&nbsp;dobrým vinním octem a&nbsp;solí, omoč v&nbsp;tom každou čtvrtku salátu, urovnej ho pěkně na misku a&nbsp;polej ho ještě všude tím smíšeným octem. Kdo chce, může salát několika na tvrdo uvařenými a&nbsp;na čtvrtky rozkrájenými vejci obložit.</p>
 
 <a id="hlavkovy-salat-na-francouzsky-zpusob"><h2>Hlávkový salát na francouzský způsob</h2></a>
 
