--- a/src/zmrzliny.html
+++ b/src/zmrzliny.html
@@ -44,7 +44,7 @@
 
 <a id="zmrzlina-z-jahod"><h2>Zmrzlina z&nbsp;jahod</h2></a>
 
-<p>Rozmačkej zralé jahody a&nbsp;proceď je skrze žíněné sejtko. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> jahodové šťávy nech dvanáct <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;koflíčkem vody tak dlouho vařit, až se opění, pak do něho naceď šťávu z&nbsp;jednoho citronu, dej k&nbsp;tomu též s&nbsp;jednoho citronu na čtvrt libře cukru ostrouhanou kůru a&nbsp;nech to mezi ustavičným mícháním docela vychladnout; potom dej k&nbsp;tomu ty procezené jahody, hodně to promíchej, dej to do pyksly, tuto postav do ledu a&nbsp;dělej zmrzlinu.</p>
+<p>Rozmačkej zralé jahody a&nbsp;proceď je skrze žíněné sejtko. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> jahodové šťávy nech dvanáct <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;<a href="miry-a-vahy.html#koflicek" class="mav">koflíčkem</a> vody tak dlouho vařit, až se opění, pak do něho naceď šťávu z&nbsp;jednoho citronu, dej k&nbsp;tomu též s&nbsp;jednoho citronu na čtvrt libře cukru ostrouhanou kůru a&nbsp;nech to mezi ustavičným mícháním docela vychladnout; potom dej k&nbsp;tomu ty procezené jahody, hodně to promíchej, dej to do pyksly, tuto postav do ledu a&nbsp;dělej zmrzlinu.</p>
 
 <a id="jahodova-zmrzlina-se-smetanou"><h2>Jahodová zmrzlina se smetanou</h2></a>
 
@@ -52,7 +52,7 @@
 
 <a id="zmrzlina-z-visni"><h2>Zmrzlina z&nbsp;višní</h2></a>
 
-<p>Utluč v&nbsp;moždíři pěkné španělské višně i&nbsp;s&nbsp;peckami, dej je do čisté nádobky a&nbsp;nech je přes noc nebo aspoň několik hodin stát, aby od pecek lepší chuť dostaly. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> takovéto procezené štávy nech 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;koflíčkem vody hezky povařit, až se začne táhnout, potom k&nbsp;němu dej tu višňovou šťávu, dobře to promíchej a&nbsp;nech to vystydnout, pak to vlej do pyksly a&nbsp;dělej zmrzlinu. Chceš-li, můžeš k&nbsp;tomu též dát s&nbsp;jednoho citronu na cukru ostrouhanou kůru i&nbsp;šťávu z&nbsp;téhož citronu do toho vymačkat, pak se ale musí přidat 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru. Také se k&nbsp;tomu může přidat trochu drobnince tlučené a&nbsp;skrze husté žíněné sejtko prosáté skořice.</p>
+<p>Utluč v&nbsp;moždíři pěkné španělské višně i&nbsp;s&nbsp;peckami, dej je do čisté nádobky a&nbsp;nech je přes noc nebo aspoň několik hodin stát, aby od pecek lepší chuť dostaly. Na <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> takovéto procezené štávy nech 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;<a href="miry-a-vahy.html#koflicek" class="mav">koflíčkem</a> vody hezky povařit, až se začne táhnout, potom k&nbsp;němu dej tu višňovou šťávu, dobře to promíchej a&nbsp;nech to vystydnout, pak to vlej do pyksly a&nbsp;dělej zmrzlinu. Chceš-li, můžeš k&nbsp;tomu též dát s&nbsp;jednoho citronu na cukru ostrouhanou kůru i&nbsp;šťávu z&nbsp;téhož citronu do toho vymačkat, pak se ale musí přidat 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru. Také se k&nbsp;tomu může přidat trochu drobnince tlučené a&nbsp;skrze husté žíněné sejtko prosáté skořice.</p>
 
 <a id="zmrzlina-z-malin"><h2>Zmrzlina z&nbsp;malin</h2></a>
 
@@ -64,7 +64,7 @@
 
 <a id="zmrzlina-z-citronu"><h2>Zmrzlina z&nbsp;citronu</h2></a>
 
-<p>Na půl libře cukru ostrouhej kůru se dvanácti citronů, šťávu z&nbsp;těch citronů proceď skrze čistý šat nebo husté žíněné sejtko do čisté nádobky, cukr nech se dvěma kávovýma koflíčkama vody vařit, až se opění, a&nbsp;když trochu prochladne, smíchej ho s&nbsp;tou citronovou šťávou, pak všecko ještě jednou skrze žíněné sejtko proceď, vlej to do pyksly a&nbsp;dělej zmrzlinu.</p>
+<p>Na půl libře cukru ostrouhej kůru se dvanácti citronů, šťávu z&nbsp;těch citronů proceď skrze čistý šat nebo husté žíněné sejtko do čisté nádobky, cukr nech se dvěma kávovýma <a href="miry-a-vahy.html#koflicek" class="mav">koflíčkama</a> vody vařit, až se opění, a&nbsp;když trochu prochladne, smíchej ho s&nbsp;tou citronovou šťávou, pak všecko ještě jednou skrze žíněné sejtko proceď, vlej to do pyksly a&nbsp;dělej zmrzlinu.</p>
 
 <a id="zmrzlina-z-pomerancu"><h2>Zmrzlina z&nbsp;pomerančů</h2></a>
 
@@ -76,7 +76,7 @@
 
 <a id="zmrzlina-z-punce"><h2>Zmrzlina z&nbsp;punče</h2></a>
 
-<p>Ostrouhej na cukru kůru s&nbsp;jednoho pomeranče a&nbsp;se dvou citronů, dej to do čisté nádobky a&nbsp;nalej na to koflíček vody, aby se to rozmočilo, potom do toho naceď šťávu ze šesti citronů a&nbsp;z&nbsp;toho pomeranče, dobře to promíchej, nech zvařit 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru jako při předešlých zmrzlinách, až se táhne, pak to smíchej dohromady, proceď to skrze servít do pyksly, a&nbsp;když to dáš k&nbsp;ledu, vlej do toho znenáhla mezi ustavičným mícháním koflíček dobrého rumu, a&nbsp;míchej tím tak dlouho, až to veskrz zmrzne.</p>
+<p>Ostrouhej na cukru kůru s&nbsp;jednoho pomeranče a&nbsp;se dvou citronů, dej to do čisté nádobky a&nbsp;nalej na to <a href="miry-a-vahy.html#koflicek" class="mav">koflíček</a> vody, aby se to rozmočilo, potom do toho naceď šťávu ze šesti citronů a&nbsp;z&nbsp;toho pomeranče, dobře to promíchej, nech zvařit 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru jako při předešlých zmrzlinách, až se táhne, pak to smíchej dohromady, proceď to skrze servít do pyksly, a&nbsp;když to dáš k&nbsp;ledu, vlej do toho znenáhla mezi ustavičným mícháním <a href="miry-a-vahy.html#koflicek" class="mav">koflíček</a> dobrého rumu, a&nbsp;míchej tím tak dlouho, až to veskrz zmrzne.</p>
 
 <a id="zmrzlina-s-maraskynem"><h2>Zmrzlina s&nbsp;maraskýnem</h2></a>
 
