--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -58,7 +58,7 @@
 
 <a id="tasky-s-tvarohem"><h2>Tašky s&nbsp;tvarohem</h2></a>
 
-<p>Udělej z&nbsp;jednoho vejce a&nbsp;z&nbsp;koflíčku vody hezky tuhé těsto, osol ho trochu a&nbsp;nech ho chvilku odpočinout.</p>
+<p>Udělej z&nbsp;jednoho vejce a&nbsp;z&nbsp;<a href="miry-a-vahy.html#koflicek" class="mav">koflíčku</a> vody hezky tuhé těsto, osol ho trochu a&nbsp;nech ho chvilku odpočinout.</p>
 
 <p>Zatím si připrav tvaroh. Na toto těsto vezmi půl nebo tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> tvarohu, hezky ho oslad, vraz do něho dvě vejce, dej do něho trochu malých hrozinek, několik hořkých mandlí, a&nbsp;dobře to promíchej. Nyní rozválej těsto tence jako na nudle, pomaž ho celé tím tvarohem a&nbsp;zaviň ho jako štrudličku, pak nakrájej z&nbsp;něho na čtyry prsty široké kousky, dobře je po obou stranách prstama přimáčkni a&nbsp;hod je do hodně vařící vody. Když se povařily, vyndej je na mísu, posyp je perníkem nebo strouhanou žemličkou, polej rozpáleným máslem a&nbsp;nes je na stůl.</p>
 
