--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -164,7 +164,7 @@
 
 <a id="bublanina-svestkova"><h2>Bublanina švestková</h2></a>
 
-<p>Vraz do čtyržejdlíkového hrnku šest žloutků, přilej k&nbsp;nim <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> mléka a&nbsp;rozkverluj to, pak do toho vmíchej tolik mouky, až máš těsto jako na hustou kapánku, přidej k&nbsp;tomu čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru a&nbsp;trošinku soli, a&nbsp;konečně –do toho vmíchej sníh z&nbsp;těch šesti bílků; nyní vymaž pekáč máslem, dej do něho asi přes polovic švestek, vlej na ně to těsto, rozkrájej na to dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla a&nbsp;nech to opéct. Na stůl dej k&nbsp;tomu skořici a&nbsp;cukr, aby si každý mohl dle libosti vzíti na svůj talíř.</p>
+<p>Vraz do <a href="miry-a-vahy.html#zejdlik" class="mav">čtyržejdlíkového</a> hrnku šest žloutků, přilej k&nbsp;nim <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> mléka a&nbsp;rozkverluj to, pak do toho vmíchej tolik mouky, až máš těsto jako na hustou kapánku, přidej k&nbsp;tomu čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru a&nbsp;trošinku soli, a&nbsp;konečně –do toho vmíchej sníh z&nbsp;těch šesti bílků; nyní vymaž pekáč máslem, dej do něho asi přes polovic švestek, vlej na ně to těsto, rozkrájej na to dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla a&nbsp;nech to opéct. Na stůl dej k&nbsp;tomu skořici a&nbsp;cukr, aby si každý mohl dle libosti vzíti na svůj talíř.</p>
 
 <a id="bublanina-visnova"><h2>Bublanina višňová</h2></a>
 
