--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -12,7 +12,7 @@
 
 <a id="zlata-cibulova-omacka"><h2>Zlatá cibulová omáčka</h2></a>
 
-<p>Rozkrájej drobně půl cibule, dej ji do žejdlíkového hrnku, nalej na ni hovězí polívky a&nbsp;nech to chvilku povařit; dej do hrnku pěl ostrouhané, ve vodě namočené vymačkané žemličky, kousek čerstvého másla, trochu sušeného, na prášek rozetřeného šafránu, rozetři to dobře, nalej do toho tu polívku, v&nbsp;které se cibule vaří, rozkverluj to a&nbsp;nech to povařit, potom dej k&nbsp;tomu zažloutlé jíšky, nech to ještě povařit a&nbsp;dej to na stůl. Tak se dělá také česneková omáčka; k&nbsp;té cibulové můžeš také připojit trochu tlučeného kmínu.</p>
+<p>Rozkrájej drobně půl cibule, dej ji do <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkového</a> hrnku, nalej na ni hovězí polívky a&nbsp;nech to chvilku povařit; dej do hrnku pěl ostrouhané, ve vodě namočené vymačkané žemličky, kousek čerstvého másla, trochu sušeného, na prášek rozetřeného šafránu, rozetři to dobře, nalej do toho tu polívku, v&nbsp;které se cibule vaří, rozkverluj to a&nbsp;nech to povařit, potom dej k&nbsp;tomu zažloutlé jíšky, nech to ještě povařit a&nbsp;dej to na stůl. Tak se dělá také česneková omáčka; k&nbsp;té cibulové můžeš také připojit trochu tlučeného kmínu.</p>
 
 <a id="cibulova-omacka-s-vinem"><h2>Cibulová omáčka s&nbsp;vínem</h2></a>
 
@@ -52,7 +52,7 @@
 
 <a id="omacka-z-angrestu"><h2>Omáčka z&nbsp;angreštu</h2></a>
 
-<p>Dej do žejdlíkového hrnečku půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> nezralého angreštu, nalej na něj hovězí polívku a&nbsp;nech to vařit, pak to proceď, v&nbsp;jiném hrnečku rozdělej kousek nového másla se dvěma vařečkama mouky a&nbsp;trochou studené smetany, a&nbsp;zakverluj tím tu omáčku; kdyby byla málo kyselá, přidej krapýtek octa; když se má dát na stůl, zakloktá se do ni jeden nebo dva žloutky.</p>
+<p>Dej do <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkového</a> hrnečku půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> nezralého angreštu, nalej na něj hovězí polívku a&nbsp;nech to vařit, pak to proceď, v&nbsp;jiném hrnečku rozdělej kousek nového másla se dvěma vařečkama mouky a&nbsp;trochou studené smetany, a&nbsp;zakverluj tím tu omáčku; kdyby byla málo kyselá, přidej krapýtek octa; když se má dát na stůl, zakloktá se do ni jeden nebo dva žloutky.</p>
 
 <a id="omacka-z-rajskych-jablek"><h2>Omáčka z&nbsp;rajských jablek</h2></a>
 
