--- a/src/sladke-rosoly.html
+++ b/src/sladke-rosoly.html
@@ -102,7 +102,7 @@
 
 <a id="studene-sodo-s-rumem"><h2>Studené šodó s&nbsp;rumem</h2></a>
 
-<p>Do šestižejdlíkového hrnku vraz 18 žloutků, dej k&nbsp;nim 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> tlučeného cukru, s&nbsp;půl citronu drobně rozkrájenou kůru, dobře to rozmíchej a&nbsp;nalej na to <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobrého rakouského vína; pak postav hrnek do uhlí a&nbsp;dělej šodó, až hodně nabude a&nbsp;zhoustne; potom ho dej na mísu, jaká obyčejně bývá na rosol, a&nbsp;nech ho vystydnout; načež do něj držadlem velké nové vařečky pěkně dokola i&nbsp;v&nbsp;prostředku napíchej direk a&nbsp;do každé nalej lžíci rumu. Okolo můžeš udělat věnec z&nbsp;cukrovaných pomerančových koláčků, nebo z&nbsp;ořechů zavařených v&nbsp;cukru atd.</p>
+<p>Do <a href="miry-a-vahy.html#zejdlik" class="mav">šestižejdlíkového</a> hrnku vraz 18 žloutků, dej k&nbsp;nim 12 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> tlučeného cukru, s&nbsp;půl citronu drobně rozkrájenou kůru, dobře to rozmíchej a&nbsp;nalej na to <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> dobrého rakouského vína; pak postav hrnek do uhlí a&nbsp;dělej šodó, až hodně nabude a&nbsp;zhoustne; potom ho dej na mísu, jaká obyčejně bývá na rosol, a&nbsp;nech ho vystydnout; načež do něj držadlem velké nové vařečky pěkně dokola i&nbsp;v&nbsp;prostředku napíchej direk a&nbsp;do každé nalej lžíci rumu. Okolo můžeš udělat věnec z&nbsp;cukrovaných pomerančových koláčků, nebo z&nbsp;ořechů zavařených v&nbsp;cukru atd.</p>
 
 <a id="smetanova-pena"><h2>Smetanová pěna</h2></a>
 
