--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -138,7 +138,7 @@
 
 <a id="teleci-hrudi-pecene-s-omackou"><h2>Telecí hrudí pečené s&nbsp;omáčkou</h2></a>
 
-<p>Z telecího hrudí vytahej všecky kosti, jen chrupavky v&nbsp;něm nech, nasol ho a&nbsp;nech ho upéct. Dej do žejdlíkového hrnku jeden díl polívky, jeden díl rakouského vina, stroužek česneku, půl cibule, 10 zrnek pepře, 10 zrnek nového koření, kousek zázvoru, bobkový lístek, kousek dymiánu, a&nbsp;nech to z&nbsp;vařit. Do mosazného moždíře dej tři tvrdé žloutky, půl cibule a&nbsp;lot v&nbsp;mouce dobře vyváleného másla, dobře to utluč, pak to dej do hrnku, proceď na to tu vinni zvařeninu, dobře to zamíchej a&nbsp;nech to povařit; potom to proceď na hrudí, okořeň to trochu tlučeným květem a&nbsp;drobně nakrájenou citronovou kůrou a&nbsp;nes to na tabuli. Kdo chce, může to zacedit citronovou šťávou, ale i&nbsp;bez citronu to výborně chutná.</p>
+<p>Z telecího hrudí vytahej všecky kosti, jen chrupavky v&nbsp;něm nech, nasol ho a&nbsp;nech ho upéct. Dej do <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkového</a> hrnku jeden díl polívky, jeden díl rakouského vina, stroužek česneku, půl cibule, 10 zrnek pepře, 10 zrnek nového koření, kousek zázvoru, bobkový lístek, kousek dymiánu, a&nbsp;nech to z&nbsp;vařit. Do mosazného moždíře dej tři tvrdé žloutky, půl cibule a&nbsp;lot v&nbsp;mouce dobře vyváleného másla, dobře to utluč, pak to dej do hrnku, proceď na to tu vinni zvařeninu, dobře to zamíchej a&nbsp;nech to povařit; potom to proceď na hrudí, okořeň to trochu tlučeným květem a&nbsp;drobně nakrájenou citronovou kůrou a&nbsp;nes to na tabuli. Kdo chce, může to zacedit citronovou šťávou, ale i&nbsp;bez citronu to výborně chutná.</p>
 
 <a id="zavinute-teleci-rizky"><h2>Zavinuté telecí řízky</h2></a>
 
