--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -4,15 +4,15 @@
 
 <p>Když se doma prasátko zabije, mívá domácí paní hlavní zřetel na jaternice. Obyčejně se bere do domu řezník, aby vepře zabil, jaternice udělal atd. Avšak tento neumí vždycky také i&nbsp;s&nbsp;drobem dobře zacházet, pročež uvedu zde o&nbsp;tom následující pojednání.</p>
 
-<h3>Jaternice</h3>
+<a id="jaternice"><h2>Jaternice</h2></a>
 
 <p>Nechají se ve slané vodě vařit plíce, chřtán, slezina, srdce a&nbsp;ostatní věci, a&nbsp;při tom též kus vepřového masa (obyčejně se k&nbsp;tomu brává podbříšek), játra pak se za syrová usekají. Když jest všecko uvařeno, tedy to drobně usekej, připoj k&nbsp;tomu ty syrové játra a&nbsp;dej k&nbsp;tomu ve vodě rozmočené, vymačkané žemličky tolik, aby byly dva díly masa a&nbsp;jeden díl žemličky, osol to, dej k&nbsp;tomu drobně rozkrájené citronové kůry, tlučeného hřebíčku, nového koření, zázvoru, trochu majoránky a&nbsp;několik stroužků se solí rozetřeného česneku (který se však také může vynechat, neboť ho každý rád nepožívá), a&nbsp;kdo chce jaternice míti hezky mastné, může kus sádla v&nbsp;té vařící polívce otužit, pak ho drobně rozsekat a&nbsp;s&nbsp;několika lžícemi mastné polívky do toho přimíchat; polívky však se nesmí dát mnoho, sice jatrnice při pečení rády pukají a&nbsp;na pekáčku rozbřednou. Když jest všecko připraveno, tedy se vezmou dobře vyčištěná střeva, jaternice se nabijou, zadělají a&nbsp;uvaří se v&nbsp;té polívce, v&nbsp;které se maso vařilo; nesmějí se však dlouho vařit, aby se nepře vařily; pak se vyndají a&nbsp;kladou se na čistá prkna. Kdo chce, může do drobu připojit asi 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> oloupaných, drobně rozkrájených mandli, zvláště v&nbsp;tom pádu, když se česnek a&nbsp;majoránka vynechá.</p>
 
-<h3>Jelita</h3>
+<a id="jelita"><h2>Jelita</h2></a>
 
 <p>Když se prasátko zabíjí, tedy se krev chytí do čistého hrnce a&nbsp;hned se dobře míchá, aby se nesedla. Řezník pak obyčejně vyřízne ten nejtučnější kus masa, tak nazvaný laloch, a&nbsp;ten se nechá s&nbsp;kusem sádla ovařit, načež se oboje rozkrájí na kostky, rozdělí se to na dva díly, jeden díl se odloží stranou, druhý se dá na prkno, na kterém se dělaly jaternice, přidá se k&nbsp;němu v&nbsp;dobrém mléce rozmočená a&nbsp;vymačkaná žemlička a&nbsp;polovička krve, dobře se to promíchá, dá se k&nbsp;tomu hřebíčku, zázvoru, nového koření, trochu pepře, citronové kůry, soli a&nbsp;ještě trochu rozpuštěného sádla (jak to kdo mastné míti chce), pak se jelita nabijou do tlustších, dobře vyčištěných střev, zadělají se a&nbsp;nechají se vařit. Druhá polovička sádla a&nbsp;krve se smíchá s&nbsp;drobnými, buď ve vodě nebo v&nbsp;mléce uvařenými kroupami, okoření, osolí a&nbsp;přimastí se, pak se nabije, zadělá a&nbsp;vaří jako předešle. Kdo chce, může v&nbsp;sádle, které se rozpuštěné do jelit přidává, nechat zapěnit kousek rozkrájené cibule, to však jen pro milovníky cibule. Když se udělá polovic žemlových a&nbsp;polovic krupových jelit, vyhoví se milovníkům obojích. Co zbude, dá se do polívky, která jest velmi chutná.</p>
 
-<h3>Klobásy</h3>
+<a id="klobasy"><h2>Klobásy</h2></a>
 <p>Na tyto se obyčejně bere krátké maso s&nbsp;krku, čemu řezník nejlépe rozumí, kde ho má vyříznout. To se drobně useká, přimíchá se k&nbsp;němu trochu v&nbsp;pivě nebo ve víně máčené žemličky, ale ne mnoho (tak asi aby byly tři díly masa a&nbsp;jeden díl žemličky), dá se k&nbsp;tomu trochu květu, trochu hřebíčku, citronové kůry, osolí se to patřičně, pak se přileje trochu piva nebo vína, dobře se to promíchá a&nbsp;nabije se to do skopových střívek. Tyto klobásy se schovají syrové, a&nbsp;pak se buď vaří nebo pečou. Čím méně žemličky, tím jsou lepší.</p>
 
 <a id="jak-se-maso-k-uzeni-naklada"><h2>Jak se maso k&nbsp;uzení nakládá</h2></a>
